# mixcloudbulkdownloader

./: .bumpversion.cfg  .dockerignore  .env.example  .env.test  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .isort.cfg  .pre-commit-config.yaml  CLAUDE.md  Dockerfile.dev  Dockerfile.dist-zip  Makefile  README.md  app.spec  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.dist.yml  main.py  pyproject.toml  pytest.ini  read.txt  requirements.txt  scraper.py  setup.py  test.py  test_button.py
.github/workflows/: macos-intel-build.yml
app/: api.py  consts.py  data_classes.py  decorators.py  logging.py  main.py  main_window.py  qt_logger.py  settings.py  threads.py
app/consts/: __init__.py  api.py  audio.py  license.py  logging.py  messages.py  settings.py  ui.py
app/custom_widgets/: __init__.py  central_widget.py  cloudcast_q_tree_widget.py  cloudcast_q_tree_widget_item.py  error_dialog.py  footer_widget.py  pro_feature_widget.py  search_user_q_combo_box.py  user_q_list_widget_item.py
app/custom_widgets/dialogs/: __init__.py  donation_dialog.py  error_dialog.py  feedback_dialog.py  get_pro_dialog.py  get_pro_persuasion_dialog.py  license_verification_failure_dialog.py  license_verification_success_dialog.py  settings_dialog.py  update_dialog.py
app/interfaces/: http_client.py
app/services/: __init__.py  api_service.py  conversion_worker.py  credential_encryptor.py  download_manager.py  download_service.py  download_worker.py  file_service.py  license_manager.py  settings_manager.py  system_service.py  update_service.py
app/styles/: __init__.py  buttons.qss  dialogs.qss  footer.qss  labels.qss  main.qss  pro_features.qss
app/threads/: download_thread.py  get_cloudcasts_thread.py  search_artist_thread.py  startup_verification_thread.py  update_check_thread.py  update_download_thread.py
app/utils/: __init__.py  cleanup.py  ffmpeg.py  version.py  yt_dlp.py
assets/: logo.icns
data_visualization/: main.py  main_widget.py  main_window.py  table_model.py
docs/: INTEL_BUILD_ROSETTA.md
expenses_tool/: main.py
mcdlr/: api.py  custom_widgets.py  data_classes.py  main.py
mcdlr/custom_widgets/: cloudcast_q_tree_widget.py  cloudcast_q_tree_widget_item.py
mcdlr/model/: cloudcast.py  user.py
qml_application/: main.py
qml_integration/: style_rc.py
scripts/: check_dl_options.py  check_requirements_export.sh  check_version_update.sh  download_ffmpeg.sh  get_poetry_version.py
sql_integration/: main.py  sql_dialog.py
tests/: __init__.py  conftest.py  stubs.py  test_api_module.py  test_api_service.py  test_cleanup_utils.py  test_conversion_worker.py  test_credential_encryptor.py  test_download_manager.py  test_download_service.py  test_download_service_enhanced.py  test_download_service_ffmpeg.py  test_download_worker.py  test_email_service.py  test_feedback_dialog_unit.py  test_ffmpeg_utils.py  test_file_service.py  test_footer_widget.py  test_license_api_integration.py  test_license_dialogs.py  test_license_manager.py  test_logging_constants.py  test_main_threading_integration.py  test_main_window_footer.py  test_pro_features.py  test_pro_integration.py  test_settings.py  test_settings_dialog.py  test_settings_manager.py  test_stylesheet_loader.py  test_system_service.py  test_threading_constants.py  test_threads.py  test_unicode_normalization_unit.py  test_unicode_progress_matching.py  test_user_list_widget_item.py  test_widgets.py
tests/stubs/: api_stubs.py  download_stubs.py  ffmpeg_stubs.py  file_stubs.py  github_api_stubs.py  license_server_stubs.py  subprocess_stubs.py  ytdlp_stubs.py
