[tool.poetry]
name = "mixcloud-bulk-downloader"
version = "2.1.0"
description = "Download for FREE all cloudcasts of your favorite Mixcloud artist at one go!"
authors = ["Simon Verhoek <simon@simonic.nl>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "3.11.5"
yt-dlp = "^2025.7.21"
httpx = "^0.28.1"
pyside6 = "^6.8.3"
environs = "^14.3.0"
keyring = "^24.3.0"

# OS-specific keyring backends per OS
pyobjc = { version = "^10.3", markers = "sys_platform == 'darwin'" }
pywin32 = { version = "^306", markers = "sys_platform == 'win32'" }
secretstorage = { version = "^3.3", markers = "sys_platform == 'linux'" }

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
pyinstaller = "^6.12.0"
keyrings-alt = "^5.0.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-qt = "^4.2.0"
pytest-mock = "^3.11.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"

[tool.poetry.group.ci.dependencies]
pytest-xvfb = "^3.1.1"

# For some reason, this is broken. Will produce the following error:
# The Poetry configuration is invalid:
#   - Additional properties are not allowed ('requires-plugins' was unexpected
# Until this is fixed, leave this code commented out

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 100
target-version = ['py311']
exclude = ""
