[tool.poetry]
name = "mixcloud-bulk-downloader"
version = "3.0.0"
description = "Download for FREE all cloudcasts of your favorite Mixcloud artist at one go!"
authors = ["Simon Verhoek <simon@simonic.nl>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "3.11.5"
yt-dlp = "^2025.7.21"
httpx = "^0.28.1"
pyside6 = "^6.8.3"
environs = "^14.5.0"
packaging = "^25.0"
httpcore = "1.0.9"
marshmallow = "4.1.2"
cryptography = "^46.0.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.1"
pyinstaller = "^6.12.0"
setuptools = "78.1.1"
filelock = "^3.20.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-qt = "^4.2.0"
pytest-mock = "^3.11.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"

[tool.poetry.group.ci.dependencies]
pytest-xvfb = "^3.1.1"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 100
target-version = ['py311']
exclude = ""
